[package]
name = "wholesome"
version = "0.1.0"
authors = ["Nishanth Shanmugham <nishanths@utexas.edu>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { features = ["full"], version = "0.2" }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.11"
logosaurus = "0.5.0"
anyhow = "1.0.33"
hyper = "0.13.8"
futures = "0.3.6"
horrorshow = "0.8.3"
